...
    <string name="employee_homepage">Employee Homepage</string>
    <string name="employer_homepage">Employer Homepage</string>
    <string name="sign_out1">Sign Out</string>
    <string name="sign_out2">Sign Out</string>
    <string name="quick_cash">Quick Cash</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="employer">Employer</string>
    <string name="employee">Employee</string>
    <string name="EMPTY_USER_NAME">Empty user name</string>
    <string name="EMPTY_STRING" />
    <string name="NON_ALPHA_NUMERIC_USER_NAME">Non-Alphanumeric user name</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid Email Address</string>
    <string name="EMPTY_FIRST_Name">Empty First Name!</string>
    <string name="EMPTY_Last_Name">Empty Last Name!</string>
    <string name="EMPTY_Password">Empty Password!</string>
    <string name="EMPTY_Confirm_Password">Empty confirm Password</string>
    <string name="Password_MissMatch">Passwords do not match</string>
    <string name="Invalid_Password">Invalid Password, enter alphanumeric value please</string>
    <string name="USER_NAME_REPEATED">USER NAME ALREADY IN USE</string>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Employer</string>
    <string name="title_notifications">User</string>
...
